--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
+url: "alainman-krh.github.io/github-pages-with-jekyll" #For jekyll-sitemap
+plugins:
+  - jekyll-sitemap
+
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
