--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-url: "alainman-krh.github.io/github-pages-with-jekyll" #For jekyll-sitemap
+#url: "alainman-krh.github.io/github-pages-with-jekyll" #For jekyll-sitemap (seems defined already)
 plugins:
   - jekyll-sitemap
 
